# ScallopShell

./: README.md
decompiler/: CMakeLists.txt  README.md
decompiler/include/: main.hpp
decompiler/include/decompilerAPI/: boxedHandlerGenerator.hpp
decompiler/src/: main.cpp  memory.cpp
decompiler/src/decompilerAPI/: boxedHandlerGenerator.cpp
include/: emulatorAPI.hpp
qemu-plugins/: CMakeLists.txt  build.sh
qemu-plugins/include/: disasm.hpp  gate.hpp  main.hpp  socket.hpp  symbols.hpp  util.hpp
qemu-plugins/src/: breakpoint.cpp  disasm.cpp  gate.cpp  main.cpp  setmem.cpp  symbols.cpp  util.cpp
src/: cligui.cpp  disasmdisplay.cpp  iodisplay.cpp
src/emulatorAPI/: cli.cpp  controlflow.cpp  disasm.cpp  emulation.cpp
tests/basic_self_modify_5/: self_modify  self_modify.c
tests/hello_world/: hello_world  hello_world.c
tests/jump_modes/: jump_modes  jump_modes.c
tests/self_modify_4x5/: self_modify_4x5  self_modify_4x5.c
tests/self_modifying_test/: Makefile  README.md  main.c  scallop_demo
